Bug 307931 - I openend a link pointing to bugs.kde.org
Summary: I openend a link pointing to bugs.kde.org
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Jörg Ehrichs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-05 15:44 UTC by m.wege
Modified: 2012-10-06 08:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-10-05 15:44:32 UTC
Application: akregator (4.9.2)
KDE Platform Version: 4.9.2
Qt Version: 4.8.2
Operating System: Linux 3.5.0-17-generic x86_64
Distribution: Ubuntu 12.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:
I openend the link 
https://bugs.kde.org/buglist.cgi?list_id=233718&chfieldto=Now&chfield=cf_versionfixedin&query_format=advanced&chfieldvalue=0.5.1&product=telepathy which appeared here: http://www.sharpley.org.uk/blog/ktp-0-5-1-released

-- Backtrace:
Application: Akregator (akregator), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fcc9f9527c0 (LWP 8133))]

Thread 2 (Thread 0x7fcc9354d700 (LWP 24931)):
#0  0x00000036d5ae8403 in __GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=<optimized out>) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00000036d7248036 in g_main_context_poll (n_fds=1, fds=0x7fcc8c009720, timeout=-1, context=0x7fcc8c004b50, priority=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3440
#2  g_main_context_iterate (dispatch=1, block=<optimized out>, context=0x7fcc8c004b50, self=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3141
#3  g_main_context_iterate (context=0x7fcc8c004b50, block=<optimized out>, dispatch=1, self=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3083
#4  0x00000036d7248164 in g_main_context_iteration (context=0x7fcc8c004b50, may_block=1) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#5  0x00000036dbbaa906 in QEventDispatcherGlib::processEvents (this=0x7fcc8c001330, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#6  0x00000036dbb79e42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#7  0x00000036dbb7a097 in QEventLoop::exec (this=0x7fcc9354cd90, flags=...) at kernel/qeventloop.cpp:204
#8  0x00000036dba79057 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#9  0x00000036dbb59b4f in QInotifyFileSystemWatcherEngine::run (this=0xe5cc6e0) at io/qfilesystemwatcher_inotify.cpp:248
#10 0x00000036dba7c07b in QThreadPrivate::start (arg=0xe5cc6e0) at thread/qthread_unix.cpp:307
#11 0x00000036d5e07e9a in start_thread (arg=0x7fcc9354d700) at pthread_create.c:308
#12 0x00000036d5af3dbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#13 0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fcc9f9527c0 (LWP 8133)):
[KCrash Handler]
#6  KParts::StatusBarExtension::addStatusBarItem (this=0x0, widget=<optimized out>, stretch=0, permanent=<optimized out>) at ../../kparts/statusbarextension.cpp:165
#7  0x00007fcc6060cab2 in MetaDataExtractorPlugin::lateInitialization() () from /usr/lib/kde4/metadataextractorplugin.so
#8  0x00000036dbb8f761 in QMetaObject::activate (sender=0x129d0430, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#9  0x00007fcc673c8a17 in KMultiPart::slotData (this=0x129d0430, job=<optimized out>, data=...) at ../../../khtml/kmultipart/kmultipart.cpp:300
#10 0x00000036dbb8f761 in QMetaObject::activate (sender=0x4ec0c850, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff7d9cf540) at kernel/qobject.cpp:3547
#11 0x0000003866af29d4 in KIO::TransferJob::data (this=<optimized out>, _t1=0x4ec0c850, _t2=...) at ./jobclasses.moc:447
#12 0x0000003866af2a38 in KIO::TransferJob::slotData (this=0x4ec0c850, _data=...) at ../../kio/kio/job.cpp:981
#13 0x00000036dbb8f761 in QMetaObject::activate (sender=0x5c62e030, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff7d9cf710) at kernel/qobject.cpp:3547
#14 0x0000003866b9a452 in KIO::SlaveInterface::data (this=<optimized out>, _t1=...) at ./slaveinterface.moc:160
#15 0x0000003866b9d6e0 in KIO::SlaveInterface::dispatch (this=<optimized out>, _cmd=100, rawdata=...) at ../../kio/kio/slaveinterface.cpp:160
#16 0x0000003866b99d35 in KIO::SlaveInterface::dispatch (this=<optimized out>) at ../../kio/kio/slaveinterface.cpp:88
#17 0x0000003866b8cfbe in KIO::Slave::gotInput (this=0x5c62e030) at ../../kio/kio/slave.cpp:344
#18 0x00000036dbb8f761 in QMetaObject::activate (sender=0x5ad979a0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#19 0x0000003866abf597 in dequeue (this=<optimized out>) at ../../kio/kio/connection.cpp:82
#20 KIO::ConnectionPrivate::dequeue (this=0x564d62a0) at ../../kio/kio/connection.cpp:71
#21 0x00000036dbb94926 in QObject::event (this=0x5ad979a0, e=<optimized out>) at kernel/qobject.cpp:1195
#22 0x00000036dd1cb7b4 in notify_helper (e=0x439dcc0, receiver=0x5ad979a0, this=0x147d950) at kernel/qapplication.cpp:4556
#23 QApplicationPrivate::notify_helper (this=0x147d950, receiver=0x5ad979a0, e=0x439dcc0) at kernel/qapplication.cpp:4528
#24 0x00000036dd1d0583 in QApplication::notify (this=0x7fff7d9d1c90, receiver=0x5ad979a0, e=0x439dcc0) at kernel/qapplication.cpp:4417
#25 0x0000003866437756 in KApplication::notify (this=0x7fff7d9d1c90, receiver=0x5ad979a0, event=0x439dcc0) at ../../kdeui/kernel/kapplication.cpp:311
#26 0x00000036dbb7b30c in QCoreApplication::notifyInternal (this=0x7fff7d9d1c90, receiver=0x5ad979a0, event=0x439dcc0) at kernel/qcoreapplication.cpp:915
#27 0x00000036dbb7f0ea in sendEvent (event=0x439dcc0, receiver=0x5ad979a0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#28 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x14345d0) at kernel/qcoreapplication.cpp:1539
#29 0x00000036dbbaa473 in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#30 postEventSourceDispatch (s=<optimized out>) at kernel/qeventdispatcher_glib.cpp:279
#31 0x00000036d7247d53 in g_main_dispatch (context=0x146fb20) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:2539
#32 g_main_context_dispatch (context=0x146fb20) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3075
#33 0x00000036d72480a0 in g_main_context_iterate (dispatch=1, block=<optimized out>, context=0x146fb20, self=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3146
#34 g_main_context_iterate (context=0x146fb20, block=<optimized out>, dispatch=1, self=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3083
#35 0x00000036d7248164 in g_main_context_iteration (context=0x146fb20, may_block=1) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#36 0x00000036dbbaa89f in QEventDispatcherGlib::processEvents (this=0x1435e60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#37 0x00000036dd273cde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#38 0x00000036dbb79e42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#39 0x00000036dbb7a097 in QEventLoop::exec (this=0x7fff7d9d04b0, flags=...) at kernel/qeventloop.cpp:204
#40 0x00000036dd61a601 in QMenu::exec (this=<optimized out>, p=..., action=0x0) at widgets/qmenu.cpp:2113
#41 0x00007fcc98a46899 in Akregator::TabWidget::contextMenu (this=0x18db840, i=<optimized out>, p=...) at ../../../akregator/src/tabwidget.cpp:356
#42 0x00000036dbb8f761 in QMetaObject::activate (sender=0x18df820, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fff7d9d0670) at kernel/qobject.cpp:3547
#43 0x0000003866516173 in KTabBar::contextMenu (this=<optimized out>, _t1=56, _t2=...) at ./ktabbar.moc:138
#44 0x00000038665162c4 in KTabBar::mousePressEvent (this=0x18df820, event=0x7fff7d9d0fd0) at ../../kdeui/widgets/ktabbar.cpp:103
#45 0x00000036dd21c299 in QWidget::event (this=0x18df820, event=0x7fff7d9d0fd0) at kernel/qwidget.cpp:8367
#46 0x00000036dd6404b6 in QTabBar::event (this=0x18df820, event=0x7fff7d9d0fd0) at widgets/qtabbar.cpp:1514
#47 0x00000036dd1cb7b4 in notify_helper (e=0x7fff7d9d0fd0, receiver=0x18df820, this=0x147d950) at kernel/qapplication.cpp:4556
#48 QApplicationPrivate::notify_helper (this=0x147d950, receiver=0x18df820, e=0x7fff7d9d0fd0) at kernel/qapplication.cpp:4528
#49 0x00000036dd1d0f2f in QApplication::notify (this=<optimized out>, receiver=0x18df820, e=0x7fff7d9d0fd0) at kernel/qapplication.cpp:4099
#50 0x0000003866437756 in KApplication::notify (this=0x7fff7d9d1c90, receiver=0x18df820, event=0x7fff7d9d0fd0) at ../../kdeui/kernel/kapplication.cpp:311
#51 0x00000036dbb7b30c in QCoreApplication::notifyInternal (this=0x7fff7d9d1c90, receiver=0x18df820, event=0x7fff7d9d0fd0) at kernel/qcoreapplication.cpp:915
#52 0x00000036dd1cc782 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#53 QApplicationPrivate::sendMouseEvent (receiver=0x18df820, event=0x7fff7d9d0fd0, alienWidget=0x0, nativeWidget=0x18df820, buttonDown=0x0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3167
#54 0x00000036dd24bb15 in QETWidget::translateMouseEvent (this=0x18df820, event=<optimized out>) at kernel/qapplication_x11.cpp:4617
#55 0x00000036dd24aace in QApplication::x11ProcessEvent (this=0x7fff7d9d1c90, event=0x7fff7d9d18a0) at kernel/qapplication_x11.cpp:3732
#56 0x00000036dd274052 in x11EventSourceDispatch (s=0x146ea10, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#57 0x00000036d7247d53 in g_main_dispatch (context=0x146fb20) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:2539
#58 g_main_context_dispatch (context=0x146fb20) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3075
#59 0x00000036d72480a0 in g_main_context_iterate (dispatch=1, block=<optimized out>, context=0x146fb20, self=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3146
#60 g_main_context_iterate (context=0x146fb20, block=<optimized out>, dispatch=1, self=<optimized out>) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3083
#61 0x00000036d7248164 in g_main_context_iteration (context=0x146fb20, may_block=1) at /build/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#62 0x00000036dbbaa89f in QEventDispatcherGlib::processEvents (this=0x1435e60, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#63 0x00000036dd273cde in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#64 0x00000036dbb79e42 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#65 0x00000036dbb7a097 in QEventLoop::exec (this=0x7fff7d9d1c40, flags=...) at kernel/qeventloop.cpp:204
#66 0x00000036dbb7f3e7 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1187
#67 0x0000000000407c4c in main (argc=<optimized out>, argv=<optimized out>) at ../../../akregator/src/main.cpp:103

Reported using DrKonqi
Comment 1 Laurent Montel 2012-10-05 16:54:38 UTC
Which rss feed ?
And I think it's a kdelibs bugs not akregator
Comment 2 Christoph Feck 2012-10-05 18:30:38 UTC
Crash is caused by playground/base/nepomuk-metadata-extractor.
Comment 3 m.wege 2012-10-05 20:20:34 UTC
It was the planet.kde.org-feed.
Comment 4 Jörg Ehrichs 2012-10-05 22:26:29 UTC
Seems this happens from the konquerer browser plugin.

Did you open a feed in the  background/tab inside akregator when thi scrash happend? And if you did, do you remeber which page you've opened?
Comment 5 Jörg Ehrichs 2012-10-05 22:29:13 UTC
*bleh* nevermind you have given this information above (didn't read the report carefully. Its already late.)

I'll have a look at it tomorrow. Atleast I can reproduce this error
Comment 6 Jörg Ehrichs 2012-10-06 08:47:01 UTC
Git commit ec49343c04aaa48ccd89a0cbf5859440edbe8a9a by Jörg Ehrichs.
Committed on 06/10/2012 at 10:45.
Pushed by jehrichs into branch 'master'.

Do not crash if StatusBarExtension is not available for current KPart

M  +2    -1    browser/konqueror/metadataextractorplugin.cpp

http://commits.kde.org/nepomuk-metadata-extractor/ec49343c04aaa48ccd89a0cbf5859440edbe8a9a