Do not crash if StatusBarExtension is not available for current KPart

BUG: 307931